Update summary of 525 journey

--- a/notebooks/Milestone4.ipynb
+++ b/notebooks/Milestone4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "reasonable-heating",
+   "id": "impossible-aberdeen",
    "metadata": {},
    "source": [
     "# DSCI 525 - Web and Cloud Computing"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "equipped-leonard",
+   "id": "baking-surrey",
    "metadata": {},
    "source": [
     "***Milestone 4:*** In this milestone, you will deploy the machine learning model you trained in milestone 3."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chicken-identity",
+   "id": "potential-utilization",
    "metadata": {},
    "source": [
     "Milestone 4 checklist :\n",
@@ -27,13 +27,13 @@
     "- [X] Develop your API here in this notebook.\n",
     "- [X] Copy it to ```app.py``` file in EC2 instance.\n",
     "- [X] Run your API for other consumers and test among your colleagues.\n",
-    "- [ ] Summarize your journey."
+    "- [X] Summarize your journey."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "quick-assets",
+   "id": "early-europe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "comfortable-memorabilia",
+   "id": "immediate-earthquake",
    "metadata": {},
    "source": [
     "## 1. Develop your API\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "important-bacon",
+   "id": "harmful-sheffield",
    "metadata": {},
    "source": [
     "You probably got how to set up primary URL endpoints from the ```sampleproject.ipynb notebook``` and have them process and return some data. Here we are going to create a new endpoint that accepts a POST request of the features required to run the machine learning model that you trained and saved in last milestone (i.e., a user will post the predictions of the 25 climate model rainfall predictions, i.e., features,  needed to predict with your machine learning model). Your code should then process this data, use your model to make a prediction, and return that prediction to the user. To get you started with all this, I've given you a template which you should fill out to set up this functionality:\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "imported-exhibition",
+   "id": "banner-vaccine",
    "metadata": {},
    "source": [
     "## 2. Deploy your API\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interested-station",
+   "id": "compound-trunk",
    "metadata": {},
    "source": [
     "Once your API (app.py) is working we're ready to deploy it! For this, do the following:\n",
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "miniature-essex",
+   "id": "activated-science",
    "metadata": {},
    "source": [
     "## 3. Summarize your journey from Milestone 1 to Milestone 4\n",
@@ -177,7 +177,12 @@
     "\n",
     "**Solution to Question 3**\n",
     "\n",
-    ">There is no format or structure on how you write this. (also, no minimum number of words).  It's your choice on how well you describe it."
+    "> - For milestone 1, we practiced scraping data from websites and loading them efficiently by either loading them in trunks or using package `dask`.  We learned about different file storage formats like feather and parquet. Through milestone 1, we realized how challenging and computation-taxing it is to deal with big data files and how file formats like .parquet and efficient loading methods could help us interact with big data files more effectively.\n",
+    "> - For milestone 2, we practiced setting up an EC2 instance that includes JupyterHub and its server based on the desired specifications. We also learned to create and upload data to an S3 bucket. We were introduced to the basics of AWS. We appreciate the power of cloud computing that allows us to interact and compute with big data seamlessly when we conducted data wrangling to prepare the data for milestone 3.\n",
+    "> - For milestone 3, we practiced how to set up an EMR cluster with one master node. We also set up the browser and Jupyter environment that connect the EMR cluster. After that, We got to practice building a machine learning model with Spark and performed hyperparameter tunings with Spark’s MLlib.  \n",
+    "> - For milestone 4, we practiced setting up Flask in an EC2 instance and developing the API for our machine learning model using `flask`. We successfully deployed the API using AWS.\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -187,14 +192,14 @@
     }
    },
    "cell_type": "markdown",
-   "id": "ordinary-liabilities",
+   "id": "pharmaceutical-cabin",
    "metadata": {},
    "source": [
     "## 4. Submission instructions\n",
     "rubric={mechanics:5}\n",
     "\n",
     "In the textbox provided on Canvas please put a link where TAs can find the following-\n",
-    "- [ ] This notebook with solution to ```1 & 3```: https://github.com/UBC-MDS/525_group7/blob/main/notebooks/Milestone4.ipynb\n",
+    "- [X] This notebook with solution to ```1 & 3```: https://github.com/UBC-MDS/525_group7/blob/main/notebooks/Milestone4.ipynb\n",
     "- [X] Screenshot from \n",
     "    - [X] Output after trying curl. Here is a [sample](https://github.ubc.ca/MDS-2020-21/DSCI_525_web-cloud-comp_students/blob/master/Milestones/milestone4/images/curl_deploy_sample.png). This is just an example; your input/output doesn't have to look like this, you can design the way you like. But at a minimum, it should show your prediction value.\n",
     "    \n",
